# ties

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  justfile  lcov.info  lychee.toml  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  trivy.yaml
.cursor/rules/: instructions.mdc
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand  postCreateCommand  postStartCommand
.devcontainer/install-scripts/: install-npm.sh
.github/: copilot-instructions.md
.github/workflows/: ci-buildx-bake.yml  ci-orchestrator.yml  docs.yml
.ties/: instructions.md  mcp.json
docs/: examples.md  index.md  user-guide.md
examples/: index.html
search/: search_index.json
src/ties/: __about__.py  __init__.py  __main__.py  _version.py
tests/: config_test.py
user-guide/: index.html
