[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "ties"
description = "A CLI tool to duplicate and sync file content with advanced transformations."
readme = "README.md"

keywords = [  ]
maintainers = [ { name = "Alon Kellner", email = "me@alonkellner.com" } ]
authors = [ { name = "Alon Kellner", email = "me@alonkellner.com" } ]
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]

dynamic = [ "version" ]
dependencies = [ "toml", "typer" ]

optional-dependencies.all = [ "pyyaml" ]
optional-dependencies.yaml = [ "pyyaml" ]
urls = { Homepage = "https://github.com/AlonKellner/ties.git", Repository = "https://github.com/AlonKellner/ties.git" }

scripts.ties = "ties.cli:app"

[dependency-groups]
dev = [ "coverage[toml]", "pytest", "pytest-cov", "pyyaml" ]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
tag-pattern = '''^[a-z]+\/(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'''

[tool.hatch.build.hooks.vcs]
version-file = "src/ties/_version.py"

[tool.pytest.ini_options]
pythonpath = "./"

[tool.coverage.run]
omit = [ "src/ties/__init__.py", "src/ties/_version.py" ]

[tool.rumdl]
disable = [ "MD052" ]

[tool.lintok]
max_tokens = 2048
exclude = [ "uv.lock", "lcov.info" ]

[tool.typos.files]
extend-exclude = [ "**/.env.*" ]

[tool.uv]
package = true
python-preference = "only-managed"
link-mode = "copy"
